--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,10 @@ kramdown:
   parse_block_html: true
 
 # Theme settings
-remote_theme: "mmistakes/minimal-mistakes"
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 plugins:
   - jekyll-remote-theme
+
 
 # Site info
 # title: "My Math Blog"
